force-app/main/default/objects/Question_Progress__c/Question_Progress__c.object-meta.xml
<CustomObject>
    <label>Question Progress</label>
    <nameField>
        <displayFormat>QP-{0000}</displayFormat>
        <label>Question Progress Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions Progress</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>