force-app/main/default/objects/Question_Progress__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option</label>
    <referenceTo>Option__c</referenceTo>
    <relationshipLabel>Questions Progress</relationshipLabel>
    <relationshipName>Questions_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>