force-app/main/default/objects/Question_Progress__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Questions Progress</relationshipLabel>
    <relationshipName>Questions_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>