force-app/main/default/objects/Question_Progress__c/fields/Unit_Progress__c.field-meta.xml
<CustomField>
    <fullName>Unit_Progress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Progress</label>
    <referenceTo>Unit_Progress__c</referenceTo>
    <relationshipLabel>Questions Progress</relationshipLabel>
    <relationshipName>Questions_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>